--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Log-in_Register.html
@@ -48,7 +48,7 @@
 <body>
     <div class="container">
         <div class="form-box login" id="form-login">
-            <form action="" method="post">
+            <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
                 <h1>LOG IN</h1>
 
