--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Welcome.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Welcome.html
@@ -263,36 +263,27 @@
                     </div>
                 </div>
                 <span class="animate scroll" style="--i:4;"></span>
-            </div>
 
-            <div class="login-box">
-                <h3>Access Your Account<span class="animate scroll" style="--i:5;"></span></h3>
-                <form action="/login/" method="POST">
-                    <div class="input-field">
-                        <input type="text" name="username" placeholder="Username" required>
-                        <i class='bx bx-user'></i>
-                        <span class="focus"></span>
-                    </div>
-
-                    <div class="input-field">
-                        <input type="password" name="password" placeholder="Password" required>
-                        <i class='bx bx-lock-alt'></i>
-                        <span class="focus"></span>
-                    </div>
-
-                    <div class="btn-box btns">
-                        <button type="submit" class="btn">Login</button>
+                <div class="btn-box btns">
+                        <button type="submit" class="btn">Already with us? Log in</button>
                         <span class="animate scroll" style="--i:6;"></span>
                     </div>
+            </div>
 
-                    <div class="register-link">
-                        <p>Don't have an account? <a href="/register/">Register here</a></p>
-                    </div>
+            <div class="contact-form">
+                <h3>Contact Us<span class="animate scroll" style="--i:5;"></span></h3>
+                <form action="#" method="post">
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <textarea placeholder="Your Message" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                    <span class="animate scroll" style="--i:6;"></span>
                 </form>
-                <span class="animate scroll" style="--i:7;"></span>
             </div>
         </div>
     </section>
+
+    
 
     <!-- Footer design -->
     <footer class="footer">
