MAKING A FEW MODIFICATIONS ON THE WELCOME PAGE-FRONTEND,VIEWS AND URL.

--- a/SIMSFS/INVENTORY_MANAGEMENT/Templates/Index.html
+++ b/SIMSFS/INVENTORY_MANAGEMENT/Templates/Index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% block title %}SIMSFS{% endblock %}</title>
+  <title>{% block title %}INVENTRACK{% endblock %}</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -478,7 +478,7 @@
     <div class="app-title">
       <div class="app-title-content">
         <i class="fa fa-warehouse"></i>
-        <span class="app-title-text">SIMSFS</span>
+        <span class="app-title-text">InvenTrack</span>
       </div>
       <i class="fa fa-bars menu-toggle" id="menuToggle"></i>
     </div>
